--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yappam/yappam-model-userauthority",
+    "name": "yappam/userauthority",
     "description": "jianjie",
     "license": "wanwan",
     "authors": [
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Yappam\\Model\\": "src/"
+            "Yappam\\Userauthority\\Model\\": "src/"
         }
     }   
 }
